Player can draw card
Added rest of minion cards

--- a/Firebrick.vcxproj
+++ b/Firebrick.vcxproj
@@ -110,7 +110,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -151,6 +151,7 @@
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BasicMinionCards.hpp" />
     <ClInclude Include="Cards.hpp" />
     <ClInclude Include="EquipCards.hpp" />
     <ClInclude Include="Game.hpp" />
