--- a/Firebrick.vcxproj.filters
+++ b/Firebrick.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="EquipCards.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BasicMinionCards.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
